--- a/style.css
+++ b/style.css
@@ -1287,6 +1287,26 @@ header ul a:hover{
         scale: 0.9;
     }
 
+    .hero-img {
+        width: 180px;
+        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
+    aspect-ratio: 1 / 1;      
+    margin: 30px auto 0;
+    border-radius: 50%;
+    overflow: hidden;         
+    box-shadow: 0 0 25px rgba(114,161,222,0.6);
+    }
+
+    .hero-img img{
+width: 100%;
+    height: 100%;
+    object-fit: cover;        
+    object-position: center;
+    display: block;
+  }
+
     .hero-info{
         bottom: 15%;
     }
